Feature: made some changes for build artifact in IntelliJ idea